Fin max int testing and a simple test to generate GC log